# playingwithtravis

./: .travis.yml  Dockerfile  README.md  ascii.txt  nohup.out  pyproject.toml  requirements.txt  test.sh
scripts/: setupenv.sh
todo_app/: app.py  flaskrun.sh  flaskwatch.sh  startapp.sh  startflask.sh  testpython.py
todo_app/templates/: index.html
todo_app/templates/ccs/: main.css
todo_app/templates/css/: main.css
todo_app/tests/: conftest.py  e2e_test.py  function_test.py  testrunner.sh  unit_test.py
todo_app/utils/: classfunct.py
