[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
requests = "^2.25.1"
Werkzeug = "^2.0.1"
MarkupSafe = "^2.0.1"
selenium = "^3.141.0"
gunicorn = "^20.1.0"
pytest = "^6.2.5"
watchdog = "^2.1.5"
PyYAML = "^5.4.1"
argh = "^0.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
